[package]
name = "s3-reproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive", "env"] }
color-spantrace = "0.2.1"
dotenvy = "0.15.7"
serde = { version = "1.0.204", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "1.0.62"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.18"

[dev-dependencies]
pretty_assertions = "1.4.0"
