[package]
name = "s3-reproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
aws-sdk-s3 = { version = "1.42.0", features = ["http-1x"] }
aws-smithy-runtime-api = "1.7.1"
aws-smithy-types = { version = "1.2.0", features = ["http-body-1-x"] }
bytes = "1.7.1"
clap = { version = "4.5.9", features = ["derive", "env"] }
color-spantrace = "0.2.1"
derivative = "2.2.0"
dotenvy = "0.15.7"
duration-string = "0.4.0"
futures = "0.3.30"
http = "1.1.0"
http-body = "1.0.1"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.6", features = ["server-auto", "server-graceful", "http1", "http2", "tokio"] }
itertools = "0.13.0"
mongodb = "3.0.1"
pin-project = "1.1.5"
s3s = "0.10.0"
s3s-aws = "0.10.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "1.0.62"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
tower = "0.4.13"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.18"

[dev-dependencies]
pretty_assertions = "1.4.0"
